--- a/arcm/arcm/WebContent/WEB-INF/config/custom/properties/application/custom.properties
+++ b/arcm/arcm/WebContent/WEB-INF/config/custom/properties/application/custom.properties
@@ -353,6 +353,7 @@ filter.row.issue.cst_modelname.DBI=Processo
 filter.row.issue.cst_process.DBI=SubProcesso
 filter.row.issue.business_unit.DBI=Unidade de Negócio
 filter.row.issue.process_environment.DBI=Ambiente de Processamento
+filter.row.issue.issue_date.DBI = Data de apontamento
 
 
 forms.row.issue.action_type.DBI = Tipo
@@ -377,6 +378,7 @@ list.MyCreatedIssues.DBI=Os meus apontamentos e planos de ação gerados
 list.MyCreatedOpenIssues.DBI=Apontamentos e Planos de ação (criador de apontamento e plano de ação)
 list.IssueOwner.DBI=Apontamentos e Planos de ação (proprietário de apontamento e plano de ação)
 list.IssueReviewer.DBI=Apontamentos e Planos de ação (revisor de apontamento e plano de ação)
+list.ReportIssues.DBI = Relatório de fechamento
 
 tab.testdefinition.DBI=Planejamento do Teste
 
@@ -416,6 +418,10 @@ tableheader.issue.cst_rescheduling.DBI=Quantidade de Replanejamentos
 tableheader.issue.cst_plandtini.DBI=Data Planejada Inicial
 tableheader.issue.cst_aging_plan.DBI=Aging de Replanejamento     
 tableheader.issue.cst_aging_pend.DBI=Aging de Pendência     
+tableheader.issue.creator_status.DBI = Status
+tableheader.issue.owner.DBI = Responsável
+tableheader.issue.owners.DBI = Dono do apontamento
+tableheader.issue.issuedate.DBI = Data de apontamento
 		
 # GRC 100 e GRC 82
 enumeration.jobs.updateIssuesJob.DBI=Verificação de planos de ação pendentes
@@ -462,6 +468,7 @@ attribute.AUDITSTEP.control.DBI = Controle
 attribute.AUDITSTEP.steps.DBI=Ficha de Escopo da Auditoria / CIC
 attribute.AUDITSTEP.auditor_group.DBI=Auditor do Plano de Auditoria / CIC
 attribute.AUDITSTEP.percentage_completed.DBI=Percentual de execução
+attribute.ISSUE.owner.DBI = Responsável
 
 enumeration.auditstatus.in_preparation.DBI = Planejamento
 enumeration.auditstatus.in_progress.DBI=Execução
