--- a/arcm/arcm/WebContent/WEB-INF/config/custom/properties/application/custom.properties
+++ b/arcm/arcm/WebContent/WEB-INF/config/custom/properties/application/custom.properties
@@ -111,10 +111,12 @@ enumeration.custom_controlfreq.unspecified.DBI=Favor Selecionar
 enumeration.custom_controlfreq.severally.DBI=Múltiplas vezes ao dia
 enumeration.custom_controlfreq.eventually.DBI=Eventual
 
+enumeration.custom_controlexecution.all.DBI=Todos
 enumeration.custom_controlexecution.automatic.DBI=Automático
 enumeration.custom_controlexecution.manual.DBI=Manual
 enumeration.custom_controlexecution.it.DBI=Dependente de TI
 
+enumeration.custom_controltype.all.DBI=Todos
 enumeration.custom_controltype.preventive.DBI=Preventivo
 enumeration.custom_controltype.detective.DBI=Detectivo
 
