--- a/arcm/arcm/WebContent/WEB-INF/config/custom/properties/application/custom.properties
+++ b/arcm/arcm/WebContent/WEB-INF/config/custom/properties/application/custom.properties
@@ -200,6 +200,9 @@ enumeration.custom_assessment_state.to_be_reviewed.DBI=Relevante para a revisão
 enumeration.custom_progress.on_time.DBI=Dentro do Prazo
 enumeration.custom_progress.overdue.DBI=Em Atraso
 
+enumeration.initiators.ceowner_notification.DBI=Vencimento de Avaliação de Controle Iminente
+enumeration.initiators.riskowner_notification.DBI=Vencimento de Avaliação de Risco Iminente
+
 #add your custom properties here INICIO
 #>>>PROJETO GPRCA - GAP GRC52
 #>>>PROJETO GPRCA - GAP GRC92 			
